data/diff_tests/wasmtime/loop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1233.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8a\80\80\80\00\02\60"
    "\01\7f\01\7f\60\00\01\7f\02\8b\80\80\80\00\01\03"
    "\65\6e\76\03\66\6f\6f\00\00\03\82\80\80\80\00\01"
    "\01\06\86\80\80\80\00\01\7f\01\41\00\0b\0a\95\80"
    "\80\80\00\01\8f\80\80\80\00\00\03\7f\23\00\10\00"
    "\41\01\24\00\0c\00\0b\0b"
  )
""
)